js-files-in-js-dir-removed-min--less-mongo-calls--convert-foot-cm-still-work

--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -5,7 +5,8 @@
 
 /* Style the links inside the navigation bar */
 #topnav a,
-#bottomnav a {
+#bottomnav a,
+#bottomnav div {
     font-size: 17px;
     float: left;
     color: #f2f2f2;
