--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,3 +1,4 @@
+/* @import url("https://fonts.googleapis.com/css2?family=VT323&display=swap"); */
 /* .nav { */
 /* background-color: #333; */
 /* overflow: hidden; */
