--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,17 @@
-/* Style the links inside the navigation bar */
+body {
+    font-family: 'roboto', sans-serif;
+    width: 800px;
+    padding-top: 80px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#yellowtail {
+    font-family: 'yellowtail', sans-serif;
+    font-size: x-large;
+}
+
+
 #topnav a,
 #bottomnav a {
     font-size: 17px;
@@ -8,11 +21,6 @@
     padding: 14px 16px;
 }
 
-/* Change the color of links on hover */
-#topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
 
 /* Add an active class to highlight the current page */
 a.active {
