--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,8 @@ body {
     font-family: 'roboto', sans-serif;
     width: 800px;
     padding-top: 80px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 40px;
+    /* margin-right: auto; */
 }
 
 #yellowtail {
@@ -11,50 +11,16 @@ body {
     font-size: x-large;
 }
 
-
-#topnav a,
+#topnav,
 #bottomnav a {
     font-size: 17px;
     float: left;
     color: #f2f2f2;
     text-decoration: none;
-    padding: 14px 16px;
+    padding: 10px 20px;
 }
 
-
-/* Add an active class to highlight the current page */
 a.active {
     background-color: #04AA6D;
     color: white;
-}
-
-
-@media screen and (max-width: 650px) {
-    .nav {
-        /* a:not(:first-child), */
-        /* .nav a:not(:last-child) { */
-        /* display: none; */
-        background-color: transparent;
-    }
-
-    /* .icon {
-        float: right;
-        display: block;
-    } */
-
-    .nav.responsive {
-        position: relative;
-    }
-
-    .nav.responsive a.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .nav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
 }
